<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_round"
    android:backgroundTint="#EDEDED"
    android:layout_marginHorizontal="10dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="0.5dp"
    android:scrollbars="vertical"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#271250"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/kitapAdi"/>

        <TextView
            android:id="@+id/textAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#271250"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/yazar"/>

        <TextView
            android:id="@+id/textYayinevi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#271250"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/yayinevi"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>