<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/edit_round"
            android:backgroundTint="#EDEDED"
            android:gravity="center"
            android:hint="@string/kitap_adi_giriniz"
            android:textColor="#271250"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textAuthor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/edit_round"
            android:backgroundTint="#EDEDED"
            android:gravity="center"
            android:hint="@string/yazar_adi_giriniz"
            android:textColor="#271250"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textYayinevi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/edit_round"
            android:backgroundTint="#EDEDED"
            android:gravity="center"
            android:hint="@string/yayinevi_giriniz"
            android:textColor="#271250"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/ekle"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>